# conflux-home

./: .env.example  .env.router.example  .gitignore  .gitleaksignore  100_ai_prompts_for_property_managers.md  ADMIN_PANEL_SCOPE.md  ADVICE.md  AGENTS.md  ANDROID_EDGE_TO_EDGE.md  APP_TOOLS_SPEC.md  ARTIFACTS.md  AUDIT_APP_TREE.md  AUDIT_FEATURE_GAPS.md  AUDIT_FRONTEND.md  AUDIT_FRONTEND_LOAD.md  AUDIT_TAURI.md  AUTH_ISOLATION_FINAL_STATUS.md  AUTH_ISOLATION_GAP_ANALYSIS.md  AUTH_WIRING_COMPLETE.md  BUILD_REPORTS.md  BUILD_SPEC.md  BUILD_SPEC_HEARTH_HOME.md  BUILD_SPEC_HEARTH_INVENTORY.md  BUILD_SPEC_HEARTH_WEEKLY.md  BUILD_STATUS.md  CANDLELIT_2.md  CAPITAL_STRATEGY.md  CONFLUX_HOME_MASTER_TESTING_CHECKLIST.md  CONFLUX_PRESENCE_ROADMAP.md  Conflux_Pitch_Deck.html  DEBUGGING_GUIDE.md  ELEVENLABS_INTEGRATION_SUMMARY.md  FINAL_AUDIT.md  FORGE_COMPLETION_REPORT.md  FRONTEND_BUILD_SPEC.md  GROWTH_QUESTIONS.md  HEARTBEAT.md  HEARTBEAT_FIRST_CHAIN.md  HEARTBEAT_FIXES_v2.md  HEARTBEAT_ISSUES.md  (+131 more)
.openclaw/: workspace-state.json
COOKING_SPEAKS/: 01-buffalo-chicken-dip.md  02-jalapeno-popper-sliders.md  03-smoky-bbq-meatballs.md  04-loaded-nacho-bake.md  05-honey-lime-fruit-cup.md  06-watermelon-mint-cooler.md  07-coke-zero-float.md  README.md
app/: robots.ts  sitemap.ts
conflux-home/: .env.example  .env.router  .gitignore  AUDIT_DEPS.md  AUDIT_ENGINE.md  AUDIT_HOOKS.md  AUDIT_SETUP.md  AUTH_ISOLATION_TEST_PLAN_COMPLETE.md  BUILD_SPEC.md  DEBUG_TEST_SUMMARY.md  DRIVER_PROMPT.md  FINAL_FIX_SUMMARY.md  INTELLIGENCE_ROADMAP.md  NEXT_SESSION_SPEC.md  PHASE_C_COMPLETE.md  (+14 more)
src-tauri/: .gitignore  Cargo.toml  build.rs  conflux.db  conflux_knowledge.md  entitlements.plist  schema.sql  tauri.android.conf.json  tauri.conf.json
src-tauri/binaries/: README.md
src-tauri/capabilities/: default.json
src-tauri/icons/: icon-manifest.json  icon.icns
src-tauri/icons/android/values/: ic_launcher_background.xml
src-tauri/models/: README.md
src-tauri/resources/: LICENSE.txt  installer.nsi
src-tauri/scripts/: SQL_USER_RESET.sql  credit_simulation.py  download-models.sh  elevenlabs-stt-test.js  elevenlabs-stt.js  generate_avatars.py  test-elevenlabs-wss.js
src-tauri/src/: budget.rs  commands.rs  lib.rs  stripe.rs
src-tauri/src/engine/: PHASE_C_IMPLEMENTATION.md  PHASE_D_PENDING.md  agent_comms.rs  cloud.rs  cloud.rs.bak  cron.rs  db.rs  deterministic.rs  echo_counselor.rs  google.rs  hearth_nutritionist.rs  local_ai.rs  memory.rs  mod.rs  nudges.rs  pulse.rs  pulse_schema.sql  router.rs  runtime.rs  state_events.rs  state_manager.rs  tool_selector.rs  tools.rs  types.rs
src-tauri/src/engine/_dead/: locks.rs  orchestrator.rs  subagent.rs
src-tauri/src/engine/commands/: voice_commands.rs
src-tauri/src/engine/security/: aegis.rs  agent_audit.rs  anomaly.rs  events.rs  mod.rs  network.rs  permissions.rs  platform.rs  quarantine.rs  remediation.rs  siem.rs  viper.rs  watchtower.rs
src-tauri/src/heartbeat_chain/: chain.rs  config.rs  mod.rs  state.rs
src-tauri/src/voice/: PHASE_C_VOICE_INTEGRATION.md  capture.rs  mod.rs  model.rs  openai.rs  stream.rs  stt.rs  synth.rs  synthesize.rs  transcribe.rs
src-tauri/tests/: engine_integration.rs  integration.rs  subagent_test.rs
(+1000 files in other folders)
